# skillgen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml  release-on-push.yml
autoskill/: cli.py  config.py  generator.py  models.py
skillgen/: __init__.py  cli.py  config.py  fetcher.py  generator.py  installer.py  keywords.py  mcp_server.py  models.py  server.py
tests/: test_cli.py  test_config.py  test_fetcher.py  test_generator.py  test_installer.py  test_keywords.py  test_parser.py
tests/fixtures/: llms_sample.txt
