[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillgen"
version = "0.1.0"
description = "MCP Server to generate and install Agent Skills from llms.txt"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Mihir Srivastava"}]
keywords = ["llms.txt", "agent", "skills", "documentation", "generator", "mcp", "claude"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/mihir-s-05/skillgen"
Repository = "https://github.com/mihir-s-05/skillgen"
Issues = "https://github.com/mihir-s-05/skillgen/issues"

dependencies = [
  "requests>=2.31.0",
  "PyYAML>=6.0",
  "trafilatura>=1.8.0",
  "beautifulsoup4>=4.12.0",
  "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
# LLM support for keyword generation (optional, adds ~2GB of dependencies)
llm = ["transformers>=4.44.0", "torch>=2.1.0"]
# Optional fallback HTML converter
extras = ["markdownify>=0.11.6"]
# Testing
test = ["pytest>=7.4"]

[project.scripts]
skillgen = "skillgen.cli:main"
skillgen-mcp = "skillgen.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skillgen*"]
